--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "[my-framework] build --output public",
     "lint": "eslint .",
     "preview": "vite preview"
   },
