--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 
   "scripts": {
     "dev": "vite",
-    "build": "[my-framework] build --output public",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
